frida (16.0.19~pirogue1) UNRELEASED; urgency=medium

  * New upstream release.
  * Delete patch:
     - fix-missing-module.diff (no longer needed).
  * Refresh patch:
     - stop-looking-at-main.diff (context updated).
     - adjust-versioning-for-debian-tags.diff (context updated).

 -- Cyril Brulebois <cyril@debamax.com>  Fri, 23 Jun 2023 01:09:42 +0200

frida (15.1.17~pirogue2) bullseye; urgency=medium

  * Add support for amd64:
     - control: add it to Architecture, alongside arm64 and armhf.
     - rules: add a mapping between amd64 and the x86_64-thin set of
       targets. The -thin part is required since otherwise Frida would try
       and perform some crossbuild, getting its wires crossed between x86
       and x86_64 anyway. It only appears elsewhere in the build directory
       (in all cases) and needs to be stripped away.

 -- Cyril Brulebois <cyril@debamax.com>  Mon, 04 Jul 2022 17:51:00 +0200

frida (15.1.17~pirogue1) bullseye; urgency=medium

  * Initial, minimal packaging for the PiRogue (based on bullseye), see
    <https://github.com/PiRogueToolSuite/deb-python> for more information.

 -- Cyril Brulebois <cyril@debamax.com>  Sun, 24 Apr 2022 14:24:50 +0200