@@ -14,7 +14,7 @@ Standards-Version: 4.2.0
 Homepage: https://frida.re/
 
 Package: frida
-Architecture: amd64 arm64 armhf
+Architecture: amd64 arm64 armhf i386
 Depends:
  ${misc:Depends},
  ${python3:Depends},
