@@ -3,9 +3,9 @@
 DEB_HOST_MULTIARCH := $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
 # arm64 and armhf require a crossbuild (and names match between Debian
-# and the upstream build system); amd64 requires an explicit native
-# build (and names differ):
-FRIDA_ARCH := $(shell dpkg --print-architecture | sed 's/amd64/x86_64-thin/')
+# and the upstream build system); amd64 and i386 require an explicit
+# native build (and names differ):
+FRIDA_ARCH := $(shell dpkg --print-architecture | sed 's/amd64/x86_64-thin/;s/i386/x86-thin/')
 PYTHON     := python-linux-$(FRIDA_ARCH)
 TOOLS      := tools-linux-$(FRIDA_ARCH)
 DIR        := build/frida_thin-linux-$(subst -thin,,$(FRIDA_ARCH))
